service-kub3/demo-svc-without-selectors.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  svc-without-selector-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-without-selector-app
  labels:
    app: svc-without-selector-app
  namespace: svc-without-selector-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    #type: Recreate
    #rollingUpdate:
      #maxSurge: 25%
      #maxUnavailable: 25%
  selector:
    matchLabels:
      app: svc-without-selector-app
  template:
    metadata:
      labels:
        app: svc-without-selector-app
    spec:
      containers:
      - name: svc-without-selector-app
        image: neotkm/pod-healthcheck:v0.05
---
kind: Service
apiVersion: v1
metadata:
  namespace: svc-without-selector-app
  name: svc-without-selector-app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2020

---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: svc-without-selector-app
  name: svc-without-selector-app
subsets:
  - addresses:
      - ip: 192.168.250.220
      - ip: 192.168.222.106
    ports:
      - port: 2020
